rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: demucs-rest:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 5000
