rest/rest-ingress-gke.yaml
# Use this ingress on GKE (replaces rest-ingress.yaml which uses nginx)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: rest-service
            port:
              number: 5000
